--- a/Public/assets/front/css/plugins.css
+++ b/Public/assets/front/css/plugins.css
@@ -4162,7 +4162,26 @@ button.ui-button::-moz-focus-inner {
 	border-radius: 8px;
 }
 
+.product-colors {
+    display: flex;
+    gap: 5px;
+    margin-top: 10px;
+    padding: 5px;
+}
 
+.color-option {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: inline-block;
+    border: 1px solid #ddd;
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+.color-option:hover {
+    transform: scale(1.2);
+}
 
 
 
