--- a/Public/assets/front/css/custom.css
+++ b/Public/assets/front/css/custom.css
@@ -968,7 +968,26 @@ iframe {
 .blog_wrapper .blog_meta {
     margin-bottom: 10px;
 }
+.product-colors {
+    display: flex;
+    gap: 5px;
+    margin-top: 10px;
+    padding: 5px;
+}
 
+.color-option {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: inline-block;
+    border: 1px solid #ddd;
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+.color-option:hover {
+    transform: scale(1.2);
+}
 
 
 
